2001-08-07  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_forward)  Bugfix:  alter
	the command line before changing the destination.

	* lib/Mj/CommandProps.pm:  Bugfix:  support the "m"
	mode of the owner command, which handles mail sent to
	the LIST-moderator address.

	* lib/Mj/List.pm:  (moderators)  Use the whoami_owner
	setting instead of the sender setting for the fallback
	address.

	* lib/Mj/Token.pm:  (confirm)  Use the whoami_owner
	setting instead of the sender setting in the From
	header of confirmation messages.

2001-08-05  Michael Yount <csf@moscow.com>

	* bin/mj_email:  Bugfix:  handle "-c" commands in the
	request section, not the majordomo section.
	
	* bin/mj_email, bin/mj_queuerun:  Differentiate the
	"email," "email-request," and "email-command" interfaces.
	The email-request interface is used if commands are processed
	by a LIST-request address.  The email-command interface is
	used if a blank message is sent to a command alias, such
	as LIST-subscribe.

	* bin/mj_shell:  Bugfix:  Work around Net::Domain bareword
	problem by invoking "use strict" after external modules
	have been loaded. 
	Store session information in a form resembling e-mail headers.

	* files/en/token_bounce:  New file, used for notifications
	when confirmation instructions cannot be delivered.

	* lib/Majordomo.pm:  (connect)  Allow hyphens in the interface
	name.
	(gen_cmdline)  Bugfix:  Use "majordomo-owner" instead of
	"GLOBAL-owner" when a message is sent to domain managers.
	(reject)  Do not send informative messages about rejected
	confirm tokens if the "noinform" or "nolog" command mode
	is used.
	(showtokens)  Add support for the "probe" command mode,
	which will allow probe tokens to be displayed.

	* lib/Mj/BounceHandler.pm:  (handle_bounce_token)  Send
	notices concerning bounced tokens to list owners, and
	possibly the requester, instead of domain owners.

	* lib/Mj/CommandProps.pm:  Support the report-full and
	showtokens-probe commands.
