@@ -1,3 +1,10 @@
+2001-08-08  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/BounceHandler.pm:  (handle_bounce_message) 
+	Return any identified bad addresses, even if the owners
+	were not notified.  This allows all message bounces to be 
+	logged as such.
+
 2001-08-07  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Access.pm:  (_a_forward)  Bugfix:  alter
